<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VideoProcessing</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_start">Record</string>
    <string name="action_stop">Stop</string>
    <string name="action_exit">Exit</string>
    <string name="action_replay">Replay</string>
    <string name="title_activity_replay">ReplayActivity</string>

</resources>
