<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gorilaalex.videoprocessing.MyActivity" >
    <item android:id="@+id/action_recording"
        android:title="@string/action_start"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_stop"
        android:title="@string/action_stop"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_replay"
        android:title="@string/action_replay"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
